# shallowwater

./: .gitignore  LICENSE  README.md  pyproject.toml  run_notebooks.sh
.github/workflows/: ci.yml
.virtual_documents/notebooks/: 01_wind_gyre.ipynb  02_gravity_waves.ipynb  04_tides.ipynb  05_abyssal_flow.ipynb  06_seiche.ipynb  07_equatorial_waves.ipynb  08_storm_surge.ipynb  09_wind_driven_kelvin_wave.ipynb  10_geostrophic_adjustment.ipynb
notebooks/: 01_wind_gyre.ipynb  02_gravity_waves.ipynb  03_tsunami.ipynb  04_tides.ipynb  05_abyssal_flow.ipynb  06_seiche.ipynb  07_equatorial_waves.ipynb  08_storm_surge.ipynb  09_wind_driven_kelvin_wave.ipynb  10_geostrophic_adjustment.ipynb  11_Rossby_wave_propagation.ipynb  12_wind_gyre_reduced_gravity.ipynb
src/shallowwater/: dynamics.py  operators.py  operators_numba.py  params.py  runner.py  visualize.py
